syntax = "proto3";

package wallet;

option go_package = "github.com/MokhtarSMokhtar/online-wallet-protos/wallet;walletpb";

service WalletService {
  rpc UpdateWallet(UpdateWalletRequest) returns (UpdateWalletResponse);
}

message UpdateWalletRequest {
  int32 user_id = 1;
  float amount = 2;
  string reason = 3;
}

message UpdateWalletResponse {
  bool success = 1;
  string message = 2;
}
